nats-micro/tests/ui/endpoint_plain_response_missing_serialize.stderr
error[E0277]: the trait bound `MissingSerialize: serde::Serialize` is not satisfied
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:10:1
   |
10 | #[service_handlers]
   | ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `nats_micro::serde::Serialize` is not implemented for `MissingSerialize`
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:5:1
   |
 5 | struct MissingSerialize;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MissingSerialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `nats_micro::serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Vec<MissingSerialize>` to implement `nats_micro::serde::Serialize`
   = help: see issue #48214
   = note: this error originates in the attribute macro `service_handlers` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingSerialize: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:10:1
   |
10 | #[service_handlers]
   | ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `nats_micro::serde::Deserialize<'_>` is not implemented for `MissingSerialize`
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:5:1
   |
 5 | struct MissingSerialize;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MissingSerialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `nats_micro::serde::Deserialize<'de>`:
             `&'a Path` implements `nats_micro::serde::Deserialize<'de>`
             `&'a [u8]` implements `nats_micro::serde::Deserialize<'de>`
             `&'a str` implements `nats_micro::serde::Deserialize<'de>`
             `()` implements `nats_micro::serde::Deserialize<'de>`
             `(T,)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1, T2)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1, T2, T3)` implements `nats_micro::serde::Deserialize<'de>`
           and $N others
   = note: required for `Vec<MissingSerialize>` to implement `for<'de> nats_micro::serde::Deserialize<'de>`
   = note: required for `Vec<MissingSerialize>` to implement `DeserializeOwned`
   = help: see issue #48214
   = note: this error originates in the attribute macro `service_handlers` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingSerialize: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:13:30
   |
13 |     async fn bad() -> Result<Vec<MissingSerialize>, NatsErrorResponse> {
   |                              ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `nats_micro::serde::Deserialize<'_>` is not implemented for `MissingSerialize`
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:5:1
   |
 5 | struct MissingSerialize;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MissingSerialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `nats_micro::serde::Deserialize<'de>`:
             `&'a Path` implements `nats_micro::serde::Deserialize<'de>`
             `&'a [u8]` implements `nats_micro::serde::Deserialize<'de>`
             `&'a str` implements `nats_micro::serde::Deserialize<'de>`
             `()` implements `nats_micro::serde::Deserialize<'de>`
             `(T,)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1, T2)` implements `nats_micro::serde::Deserialize<'de>`
             `(T0, T1, T2, T3)` implements `nats_micro::serde::Deserialize<'de>`
           and $N others
   = note: required for `Vec<MissingSerialize>` to implement `for<'de> nats_micro::serde::Deserialize<'de>`
   = note: required for `Vec<MissingSerialize>` to implement `DeserializeOwned`
note: required by a bound in `deserialize_response`
  --> src/response.rs
   |
   | pub fn deserialize_response<
   |        -------------------- required by a bound in this function
   |     T: crate::serde::de::DeserializeOwned,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `deserialize_response`

error[E0277]: the trait bound `MissingSerialize: serde::Serialize` is not satisfied
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:13:30
   |
10 | #[service_handlers]
   | ------------------- required by a bound introduced by this call
...
13 |     async fn bad() -> Result<Vec<MissingSerialize>, NatsErrorResponse> {
   |                              ^^^ unsatisfied trait bound
   |
help: the trait `nats_micro::serde::Serialize` is not implemented for `MissingSerialize`
  --> tests/ui/endpoint_plain_response_missing_serialize.rs:5:1
   |
 5 | struct MissingSerialize;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MissingSerialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `nats_micro::serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Vec<MissingSerialize>` to implement `nats_micro::serde::Serialize`
   = note: required for `nats_micro::Json<Vec<MissingSerialize>>` to implement `IntoNatsResponse`
